Modicada ruta de manifest en archivo index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
 
-    <link rel="manifest" href="/webApp_MercaDo/ClasesFernando_PWA/06-twittor/manifest.json"/>  <!-- Sin slash porque estara en GitHub -->
+    <link rel="manifest" href="manifest.json"/>  <!-- Sin slash porque estara en GitHub, en localHost hay que colocar: /webApp_MercaDo/ClasesFernando_PWA/06-twittor/ -->
     
     <!-- Android theme color -->
     <meta name="theme-color" content="#3498db">
